Add link to GitHub

--- a/index.html
+++ b/index.html
@@ -215,6 +215,9 @@
                         <li>Videotron</li>
                     </ul>
                 </p>
+                <p>
+                    <a href="https://github.com/rickparrish/CapSavvInator" target="_blank">Check out the source on GitHub!</a>
+                </p>
             </div>
             <div class="panel-footer">
                 <a href="#" onclick="OpenPanel('Usage');">Close Panel</a>
