Add support for TekSavvy

--- a/index.html
+++ b/index.html
@@ -203,16 +203,15 @@
                     CapSavvy!)
                 </p>
                 <p>
-                    CapSavvy supports the following ISPs, so in theory I can support all the same ISPs with CapSavvInator, but I only have
-                    an API Key for Start (since I'm a Start customer), so that's the only one that is currently supported.  If you want one
-                    of the others to be supported by this website, you'll need to share your API Key with me (which I'll only use during
-                    testing and delete all record of afterwards).
+                    CapSavvy supports the following ISPs, so in theory I can support all the same ISPs with CapSavvInator, but I'll need someone
+                    to share their API Key for some of the providers so I can properly implement and test my changes.  So if you want one
+                    of the others to be supported by this website, get in touch with me via the Contact page.
                     <ul>
-                        <li>Caneris</li>
-                        <li>Electronicbox</li>
+                        <li>Caneris (not yet supported)</li>
+                        <li>Electronicbox (not yet supported)</li>
                         <li>Start</li>
                         <li>TekSavvy</li>
-                        <li>Videotron</li>
+                        <li>Videotron (not yet supported)</li>
                     </ul>
                 </p>
                 <p>
@@ -229,7 +228,7 @@
                 Contact
             </div>
             <div class="panel-body">
-                If you need to get a hold of me, <a href="http://www.randm.ca/contact" target="_blank">try my R&amp;M contact form</a>.
+                If you need to get a hold of me, <a href="https://www.randm.ca/contact" target="_blank">try my R&amp;M contact form</a>.
             </div>
             <div class="panel-footer">
                 <a href="#" onclick="OpenPanel('Usage');">Close Panel</a>
@@ -270,7 +269,7 @@
     <div id="footer">
         <div class="container">
             <p>
-                &copy; 2014 <a href="http://www.rickparrish.ca">Rick Parrish</a>, <a href="http://www.randm.ca">R&amp;M Software</a><br />
+                &copy; 2014 <a href="https://www.rickparrish.ca">Rick Parrish</a>, <a href="https://www.randm.ca">R&amp;M Software</a><br />
                 <a href="http://www.dslreports.com/forum/r29128976-CapSavvy-v4.3-released-" target="_blank">CapSavvy</a> is &copy; 2014 Adam Zey, Darryl Tam
             </p>
         </div>
